<resources>
  <string name="app_name">BitsEdit</string>
  <string name="b10">10:</string>
  <string name="b16">16:</string>
  <string name="base10">Base 10</string>
  <string name="base16">Base 16</string>
  <string name="base10_colon">Base 10:</string>
  <string name="base16_colon">Base 16:</string>
  <string name="zero">0</string>
  <string name="one">1</string>
  <string name="dot">.</string>
  <string name="shift_left">&lt;&lt;</string>
  <string name="shift_right">&gt;&gt;</string>
  <string name="more">More</string>
  <string name="value1">Value 1</string>
  <string name="value2">Value 2</string>
  <string name="base">Base</string>
  <string name="operation">Operation</string>*
  <string name="result">Result: </string>
  <string name="error">ERROR</string>
  <string name="empty" />
  <string name="decimal">DEC</string>
  <string name="hexadecimal">HEX</string>
  <string name="and">AND</string>
  <string name="and_not">AND NOT</string>
  <string name="not">NOT</string>
  <string name="or">OR</string>
  <string name="xor">XOR</string>
</resources>
