<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_more"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="fr.ralala.bitsedit.ui.MoreActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/labelValue1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:text="@string/value1" />

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/etValue1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/labelValue1"
      android:digits="0123456789"
      android:fontFamily="monospace"
      android:hint="@string/empty"
      android:imeOptions="actionNext"
      android:inputType="number"
      android:maxLength="20"
      android:maxLines="1"
      android:minHeight="@dimen/touch_target_size"
      tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    <LinearLayout
      android:id="@+id/btGroupBase1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/etValue1"
      android:gravity="center_horizontal">

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btBaseDec1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/decimal"
        tools:ignore="DuplicateSpeakableTextCheck" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btBaseHex1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/hexadecimal"
        tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/labelValue2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/btGroupBase1"
      android:text="@string/value2" />

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/etValue2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/labelValue2"
      android:digits="0123456789"
      android:fontFamily="monospace"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:maxLength="20"
      android:maxLines="1"
      android:minHeight="@dimen/touch_target_size"
      tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    <LinearLayout
      android:id="@+id/btGroupBase2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/etValue2"
      android:gravity="center_horizontal">

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btBaseDec2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/decimal" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btBaseHex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/hexadecimal" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvOperation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/btGroupBase2"
      android:layout_alignParentStart="true"
      android:gravity="center_vertical"
      android:text="@string/operation" />

    <com.google.android.flexbox.FlexboxLayout
      android:id="@+id/btGroupOperations"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/tvOperation"
      android:gravity="center_horizontal"
      app:flexDirection="row"
      app:flexWrap="wrap"
      app:justifyContent="center">


      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttons_margin"
        android:text="@string/and" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAndNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttons_margin"
        android:text="@string/and_not" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttons_margin"
        android:text="@string/not" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttons_margin"
        android:text="@string/or" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btXor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttons_margin"
        android:text="@string/xor" />

    </com.google.android.flexbox.FlexboxLayout>

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvResultLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/btGroupOperations"
      android:fontFamily="monospace"
      android:text="@string/result" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvResult"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/tvResultLabel"
      android:layout_alignParentStart="true"
      android:fontFamily="monospace"
      android:text="@null" />
  </RelativeLayout>
</ScrollView>
