<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="fr.ralala.bitsedit.ui.MainActivity">


  <LinearLayout
    android:id="@+id/llScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:id="@+id/llBin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"></LinearLayout>

    <RelativeLayout
      android:id="@+id/llShifts"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/shift_layout_marginTop"
      android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btShiftLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/shift_left" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/more" />

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btShiftRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/shift_right"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>
  </LinearLayout>

</ScrollView>
